examples/datalog/09_recursion/71_shortest_path_length.dl
% Test: Shortest path length pattern
% Expected: Find minimum distance using recursion
% Category: 09_recursion
% Priority: P2 - Recursion patterns

.kg create test_shortest
.kg use test_shortest

+edge[(1, 2), (2, 3), (1, 3), (3, 4), (2, 4)].

% Base: direct edges have distance 1
+path(X, Y, 1) :- edge(X, Y).

% Extend paths
+path(X, Z, D2) :- path(X, Y, D), edge(Y, Z), D2 = D + 1, D < 5.

% Find all paths from 1 to 4
?- path(1, 4, D).

% Find minimum distance (would need MIN aggregation)
+min_dist(X, Y, <MIN:D>) :- path(X, Y, D).

?- min_dist(1, 4, D).

.kg use default
.kg drop test_shortest
